gen/container/v1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-container1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/container/v1/lib)
error[E0423]: expected value, found struct `aggregated::AggregatedActions`
    --> gen/container/v1/lib/src/lib.rs:3186:13
     |
3186 |             aggregated::AggregatedActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `aggregated::AggregatedActions { /* fields */ }`?

error[E0423]: expected value, found struct `locations::LocationsActions`
    --> gen/container/v1/lib/src/lib.rs:3190:13
     |
3190 |             locations::LocationsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `locations::LocationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `zones::ZonesActions`
    --> gen/container/v1/lib/src/lib.rs:3194:13
     |
3194 |             zones::ZonesActions
     |             ^^^^^^^^^^^^^^^^^^^ did you mean `zones::ZonesActions { /* fields */ }`?

error[E0423]: expected value, found struct `usable_subnetworks::UsableSubnetworksActions`
    --> gen/container/v1/lib/src/lib.rs:3206:17
     |
3206 |                 usable_subnetworks::UsableSubnetworksActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `usable_subnetworks::UsableSubnetworksActions { /* fields */ }`?

error[E0423]: expected value, found struct `clusters::ClustersActions`
    --> gen/container/v1/lib/src/lib.rs:3507:17
     |
3507 |                 clusters::ClustersActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `clusters::ClustersActions { /* fields */ }`?

error[E0423]: expected value, found struct `operations::OperationsActions`
    --> gen/container/v1/lib/src/lib.rs:3511:17
     |
3511 |                 operations::OperationsActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `operations::OperationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `node_pools::NodePoolsActions`
    --> gen/container/v1/lib/src/lib.rs:4085:21
     |
4085 |                     node_pools::NodePoolsActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `node_pools::NodePoolsActions { /* fields */ }`?

error[E0423]: expected value, found struct `well_known::WellKnownActions`
    --> gen/container/v1/lib/src/lib.rs:4089:21
     |
4089 |                     well_known::WellKnownActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `well_known::WellKnownActions { /* fields */ }`?

error[E0423]: expected value, found struct `clusters::ClustersActions`
    --> gen/container/v1/lib/src/lib.rs:8683:17
     |
8683 |                 clusters::ClustersActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `clusters::ClustersActions { /* fields */ }`?

error[E0423]: expected value, found struct `operations::OperationsActions`
    --> gen/container/v1/lib/src/lib.rs:8687:17
     |
8687 |                 operations::OperationsActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `operations::OperationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `node_pools::NodePoolsActions`
    --> gen/container/v1/lib/src/lib.rs:9306:21
     |
9306 |                     node_pools::NodePoolsActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `node_pools::NodePoolsActions { /* fields */ }`?

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-container1`.

To learn more, run the command again with --verbose.
